@@ -30,6 +30,22 @@ Configurations can now be part of several groups. As such, the "group" property 
 and is replaced with the :ref:`groups <administration-general-tca-properties-groups>` property
 (with an array value rather than string).
 
+.. note::
+
+   A Rector rule is provided for migration. Use it in your :file:`rector.php` file:
+
+   .. code-block:: php
+
+        return RectorConfig::configure()
+            ...
+            ->withRules([
+                ...
+                \Cobweb\ExternalImport\Rector\ChangeGroupPropertyRector::class,
+            ])
+            ...
+        ;
+
+
 System extension "reactions" is now a requirement. The "Import external data" reaction
 can now target a :ref:`group of configurations <administration-general-tca-properties-group>`.
 
