@@ -1,3 +1,7 @@
+2025-03-10 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+    * Add rector rule for migrating "group" property
+
 2025-03-07 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Avoid error in case of missing sorting field
